<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>
    <string name="newGame">New Game</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_level_">Select level:</string>
    <string name="selectImage">Select Image</string>
    <string name="useDefaultImage">Default Image</string>
    <string name="save">Save</string>
    <string name="enter_your_name">Enter your name</string>

    <string-array name="level_options">
        <item>Very Easy</item>
        <item>Random Moves</item>
        <item>Normal</item>
    </string-array>

    <string name="title_activity_menu">Tic Tac Toe</string>

</resources>
