<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/board"
    tools:context=".SettingsActivity" >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_name" >

        <requestFocus
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="140dp"
            android:layout_height="51dp" 
            android:text="@string/select_level_"
            android:textSize="20sp"
            android:gravity="center"/>

    <Spinner
        android:id="@+id/options"
        android:layout_width="150dp"
        android:layout_height="58dp" >
    </Spinner>
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal">
    <Button
        android:id="@+id/selectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/selectImage" />
     <Button
        android:id="@+id/defaultImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:text="@string/useDefaultImage" /> 
	</LinearLayout>
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/save" />

</LinearLayout>
